Fixed span not wrapping words bug

--- a/website/src/assets/scss/App.scss
+++ b/website/src/assets/scss/App.scss
@@ -42,3 +42,9 @@ a {
 .box-shadow {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+.gradient-outline {
+    position: relative;
+    background-image: $standard-gradient;
+    padding: 1px;
+}
