--- a/website/src/assets/scss/_our-games.scss
+++ b/website/src/assets/scss/_our-games.scss
@@ -9,11 +9,11 @@ $margin-size: 2%;
     position: relative;
 
     width: 100%;
-    height: 200px;
+    height: 150px;
 
     margin-bottom: 20px;
 
-    background-image: linear-gradient(45deg, #44d3c7 25%, #16f7a0);
+    background-image: $standard-gradient;
 }
 
 .description {
